Fixed Layout Issue and Added Log In UI

--- a/public/css/components/header_footer.css
+++ b/public/css/components/header_footer.css
@@ -1,5 +1,5 @@
 header {
-    margin-bottom: 7rem;
+    margin-bottom: 9rem;
 }
 
 .navbar {
